# puppet-ceilometer

./: .fixtures.yml  .gitignore  .gitreview  .travis.yml  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  Gemfile  Modulefile  README  README.md  Rakefile  api.pp  metadata.json  setup.cfg
examples/: ceilometer_with_gnocchi.pp  site.pp
files/patches/: 670b3882-fix-rpc-control_exchange-regression.patch
manifests/: agent-central.pp  agent-compute.pp  api.pp  cache.pp  client.pp  collector.pp  config.pp  coordination.pp  db.pp  deps.pp  expirer.pp  init.pp  logging.pp  params.pp  policy.pp  reports.pp
manifests/agent/: auth.pp  central.pp  compute.pp  notification.pp  polling.pp  service_credentials.pp
manifests/alarm/: evaluator.pp  notifier.pp
manifests/db/: init.pp  mysql.pp  postgresql.pp  sync.pp
manifests/dispatcher/: gnocchi.pp
manifests/keystone/: auth.pp  authtoken.pp
manifests/notify/: rabbitmq.pp
manifests/wsgi/: apache.pp
releasenotes/notes/: Adds-enable-proxy-header-parsing-64b78b56d8787e1d.yaml  add-agent-notification-polling-config.yaml-7756bf89719cdbcf.yaml  add-instance-discovery-methods-5d4dde0ebf4cec28.yaml  add-l3-cache-bb9e64e9a9337d6d.yaml  add-more-oslo-cache-params-to-init-70207eea609cf621.yaml  add_messaging_notification_parameters-34197a234ef9871d.yaml  add_oslo_messaging_amqp-4ae1ae4234921ad3.yaml  add_tenant_name_discovery-4671aec3daae9622.yaml  (+125 more)
spec/: spec_helper_acceptance.rb
templates/: event_pipeline.yaml.erb  pipeline.yaml.erb  polling.yaml.erb
tests/: agent-central.pp  agent-compute.pp  collector.pp  init.pp
(+53 files in other folders)
