[metadata]
name = puppet-ceilometer
summary = Puppet module for OpenStack Ceilometer
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/developer/puppet-openstack-guide
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
